--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="form.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <form action="" id="form">
+            <h3 class="title">Form exercise</h3>
+            <label for="">Name</label>
+            <input type="text" class="name">
+            <label for="">E-mail</label>
+            <input type="email" class="address">
+            <select name="cities" id="cities">
+                <option value="">Baku</option>
+                <option value="">Sumgait</option>
+                <option value="">Gandja</option>
+            </select>
+            <div class="flexlible">
+                <input type="checkbox" name="football" class="hobby">
+                <p class="hidden">this is hidden element.</p>
+                
+            </div>
+            <a href="#" class="btn">CLICK ME</a>
+        </form>
+        <div id="action"></div>
+    </div>
 
-
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <script src="form.js"></script>
 </body>
+
 </html>
