--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <a href="#" class="btn">CLICK ME</a>
         </form>
-        <div id="action"></div>
+        <div id="action_div"></div>
     </div>
 
     <!-- <script src="main.js"></script> -->
